--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@ant-design/pro-layout": "^6.5.0",
+    "axios": "^0.21.1",
     "react": "17.x",
     "react-dom": "17.x",
     "umi": "^3.5.15"
