--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "umi dev",
     "dev-no-mock": "cross-env UMI_ENV=dev-no-mock umi dev",
+    "build-dev": "cross-env UMI_ENV=prd-dev umi build",
     "build": "umi build",
     "postinstall": "umi generate tmp",
     "prettier": "prettier --write '**/*.{js,jsx,tsx,ts,less,md,json}'",
