fix: 部署dev测试机

--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -7,7 +7,7 @@ name: deploy for dev
 on:
     push:
         branches:
-            - 'master' # 只针对 dev 分支
+            - 'dev' # 只针对 dev 分支
         paths:
             - '.github/workflows/*'
             - '__test__/**'
