fix: 修复仓库地址

--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -38,10 +38,10 @@ jobs:
                   ssh zhouxiao@139.155.58.207 "
                     # 【注意】手动创建 /home/zhouxiao/filway-lego 目录
                     # 然后 git clone https://username:password@github.com/filway/admin-fe.git -b dev （私有项目，使用 github 用户名和密码下载）
-                    # 记得删除 origin ，否则会暴露 github的密码
+                    # 记得删除 origin ，否则会暴露 github 密码
 
                     cd /home/zhouxiao/filway-lego/admin-fe;
-                    git remote add origin https://filway:${{secrets.ZX_PASSWORD}}@github.com/filawy/admin-fe.git;
+                    git remote add origin https://filway:${{secrets.ZX_PASSWORD}}@github.com/filway/admin-fe.git;
                     git checkout dev;
                     git pull origin dev; # 重新下载最新代码
                     git remote remove origin; # 删除 origin ，否则会暴露 github 密码
