--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "postinstall": "umi generate tmp",
     "prettier": "prettier --write '**/*.{js,jsx,tsx,ts,less,md,json}'",
     "test": "umi-test",
-    "test:coverage": "umi-test --coverage"
+    "test:coverage": "umi-test --coverage",
+    "release": "release-it",
+    "just-try-release": "release-it --dry-run"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
@@ -32,6 +34,7 @@
     "umi": "^3.5.15"
   },
   "devDependencies": {
+    "@release-it/conventional-changelog": "^3.2.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@umijs/preset-react": "1.x",
@@ -39,6 +42,7 @@
     "cross-env": "^7.0.3",
     "lint-staged": "^10.0.7",
     "prettier": "^2.2.0",
+    "release-it": "^14.11.5",
     "typescript": "^4.1.2",
     "yorkie": "^2.0.0"
   }
